[package]
name = "lfs-os"
version = "0.1.0"
edition = "2021"
description = "git-lfs backend supporting a variety of storage options"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
futures = "0.3.28"
object_store = { version = "0.8.0", features = ["aws", "gcp", "azure"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

[dev-dependencies]
anyhow = "1.0.75"
gix = "0.55.2"
data-encoding = "2.4.0"
ring = "0.17.5"
duct = "0.13.6"
tempfile = "3.8.0"
rand = "0.8.5"
